[package]
name = "rust_book_chapter_14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Can set the dev profile up differently.
[profile.dev]
#opt-level = 0 #Default value
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]

